--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^48.0.7",
-    "expo-constants": "~14.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^49.0.0-alpha.3",
+    "expo-constants": "~14.3.0",
+    "expo-linking": "~4.1.0",
+    "expo-router": "^1.7.1",
+    "expo-splash-screen": "~0.19.0",
+    "expo-status-bar": "~1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated": "~3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
