--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
-    "tailwind": "^4.0.0"
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
