--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo-router": "^1.7.1",
     "expo-splash-screen": "~0.19.0",
     "expo-status-bar": "~1.5.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
